tests/snapshots/examples_fixtures/type_system__failing__161_tuple_destructure_concrete_mismatch_prefers_e300.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/161_tuple_destructure_concrete_mismatch_prefers_e300.flx
== compile ==
failed (compile)
== diagnostics ==
Error[E300]: Type Mismatch

I found a type mismatch.

  examples/type_system/failing/161_tuple_destructure_concrete_mismatch_prefers_e300.flx:2:18
  |
2 |     let (a, b) = 1
  |                  ^
  |                  - this expression has type `Int`

  |                  - destructure source type is known at compile time

Note:
  expected type: (_, _)
  found type: Int

Help:
  These two types are not compatible.
  destructure source does not match pattern shape
== stdout ==
<not executed>
