tests/snapshots/examples_fixtures/type_system__failing__166_self_recursive_guard_stable_unresolved.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/166_self_recursive_guard_stable_unresolved.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `mystery_value`.

  examples/type_system/failing/166_self_recursive_guard_stable_unresolved.flx:3:9
  |
3 |         mystery_value
  |         ^^^^^^^^^^^^^

Hint:
  Define it first: let mystery_value = ...;


Warning: missing CFG bytecode binding for IR call dest


Found 1 error and 1 warning.
== stdout ==
<not executed>
