tests/snapshots/examples_fixtures/type_system__failing__167_tuple_destructure_ordered_concrete_conflict_e300.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/167_tuple_destructure_ordered_concrete_conflict_e300.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
